--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 <p><span>О себе:</span> Доброго времени суток! Меня зовут Илья, мне 24 года, учусь в
                                     институте на специальность «Информационные системы и технологии». Поставил себе цель
                                     стать отличным Frontend разработчиком. Было бы очень круто попасть к вам на
-                                    стажировку. А еще я очень веселый и коммуникабельный и у меня есть большой кот, ну
-                                    прям очень большой. Если интересно пригласите меня на собеседования и я покажу вам
+                                    стажировку. А еще я очень веселый, коммуникабельный, и у меня есть большой кот, ну
+                                    прям очень большой. Если интересно, пригласите меня на собеседования и я покажу вам
                                     фотографию БОЛЬШОГО кота. </p>
                             </div>
                         </div>
